Enough for today

--- a/slides.html
+++ b/slides.html
@@ -177,7 +177,7 @@ So take citation! -->
 </section><section id="fair-software-practice-of-fair-play" class="slide level2" data-transition="none-in slide-out">
 <h2>FAIR Software + practice of FAIR PLAY</h2>
 <p><img data-src="image/rse.png" /></p>
-</section><section id="thanks" class="slide level2">
+</section><section id="thanks" class="slide level2" style="text-align: center;">
 <h2>Thanks!</h2>
 <div class="center">
 <p><a href="https://citation-file-format.github.io">citation-file-format.github.io</a><br />
