--- a/index.html
+++ b/index.html
@@ -309,8 +309,8 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 </section><section id="fair-software-practice-of-fair-play" class="slide level2" data-transition="none-in slide-out">
 <h2>FAIR Software + practice of FAIR PLAY</h2>
 <p><img data-src="image/rse.png" /></p>
-</section><section id="conclusion-1" class="slide level2">
-<h2>Conclusion</h2>
+</section><section id="conclusion-proper" class="slide level2">
+<h2>Conclusion proper</h2>
 <div class="fragment">
 <div class="large">
 <ul>
