--- a/index.html
+++ b/index.html
@@ -335,7 +335,7 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 <div class="fragment">
 <div class="large">
 <ul>
-<li>Even if we fail to define FAIR for software,<br />
+<li>Even if we fail to define FAIR Software,<br />
 FAIR + RSE = FAIR PLAY can achieve for software<br />
 what FAIR has achieved for data</li>
 </ul>
