--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 <ul>
 <li>Publicly funded research products (software) <a href="https://publiccode.eu/">belong to the public</a></li>
 <li>Use (permissive) open source licensing</li>
-<li>Publish your software proactively</li>
+<li>Publish your software proactively in a registry which provides a PID</li>
 <li>Archive your software sustainably (<a href="https://www.softwareheritage.org/">Software Heritage</a>)</li>
 </ul>
 <div class="center">
