Add DOI for slides

--- a/index.html
+++ b/index.html
@@ -349,7 +349,7 @@ what FAIR has achieved for data</li>
 <p>stephan.druskat@dlr.de<br />
 Twitter: <a href="http://twitter.com/stdruskat">@stdruskat</a><br />
 ORCiD <a href="https://orcid.org/0000-0003-4925-7248">0000-0003-4925-7248</a><br />
-Slides: <a href="https://doi.org/10.6084/m9.figshare.10296917">doi:10.6084/m9.figshare.10296917</a> [TODO]</p>
+Slides: <a href="https://doi.org/10.6084/m9.figshare.10565717">doi:10.6084/m9.figshare.10565717</a></p>
 </div>
 </section></section>
 <section><section id="appendix" class="title-slide slide level1"><h1>Appendix</h1></section><section id="image-credits" class="slide level2">
