Mention where CFF should go

--- a/index.html
+++ b/index.html
@@ -281,8 +281,9 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 <h2>Manual creation &amp; curation</h2>
 <div class="large">
 <ul>
-<li>Copy, paste &amp; adapt the example</li>
-<li>Use a simple webservice: <a href="https://citation-file-format.github.io/cff-initializer-javascript/">citation-file-format.github.io/cff-initializer-javascript/</a></li>
+<li>Copy, paste &amp; adapt the example, <em>or</em></li>
+<li>use a simple webservice: <a href="https://citation-file-format.github.io/cff-initializer-javascript/">citation-file-format.github.io/cff-initializer-javascript/</a>.</li>
+<li>Put <code>CITATION.cff</code> in the root of your source code repository.</li>
 </ul>
 </div>
 </section><section id="auto-generation" class="slide level2">
