--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 <ul>
 <li>We, the research software community, can make use of the brand, e.g.:
 <ul>
-<li>Policy changes create leverage (FAI<strong>RSE</strong>?)</li>
+<li>Policy changes create leverage (to campaign for RSE, or FAI<strong>RSE</strong>)</li>
 <li>May increase visibility for software sustainability concerns</li>
 </ul></li>
 </ul>
@@ -180,7 +180,7 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 <div class="fragment">
 <div class="large">
 <p>FAIR PLAY Software is …</p>
-<p><strong>F</strong>indable, <strong>A</strong>ccessible, <strong>I</strong>nteroperable, <strong>R</strong>eusable,<span class="fragment"><br/>and <strong>P</strong>er default open source,</span> <span class="fragment">therefore <em><strong>L</strong>iterally</em> accessible,</span> <span class="fragment"><strong>A</strong>ttributing contributions for credit,</span> <span class="fragment">and of adequate qualit<strong>Y</strong>!</span></p>
+<p><strong>F</strong>indable, <strong>A</strong>ccessible, <strong>I</strong>nteroperable, <strong>R</strong>eusable,<span class="fragment"><br/>and <strong>P</strong>er default open source,</span> <span class="fragment"><strong>L</strong>icensed,</span> <span class="fragment"><strong>A</strong>ttributing contributions to it (for credit),</span> <span class="fragment">and of adequate qualit<strong>Y</strong>!</span></p>
 </div>
 <aside class="notes">
 <p>[TODO: Instead of trying to squeeze software into FAIR, we should extend FAIR to cover software]</p>
@@ -192,7 +192,7 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 <ul>
 <li>Publicly funded research products (software) <a href="https://publiccode.eu/">belong to the public</a></li>
 <li>Use (permissive) open source licensing</li>
-<li>Publish your software proactively in a registry which provides a PID</li>
+<li>Publish your software proactively in a registry, get a PID (DOI)</li>
 <li>Archive your software sustainably (<a href="https://www.softwareheritage.org/">Software Heritage</a>)</li>
 </ul>
 <div class="center">
@@ -206,6 +206,7 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 <li>understand it,</li>
 <li>use it,</li>
 <li>trust it.</li>
+<li>change it.</li>
 </ol></li>
 <li>How do we measure software quality?<br />
 (Internal) metrics? Peer review? Usage?</li>
@@ -292,7 +293,7 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 <li>Let your build (soon for Maven, incl. dependencies) or registry do it</li>
 </ul>
 <div class="center">
-<p><img src="image/ascl.gif" style="height: 380px"></p>
+<p><img src="image/ascl.gif" style="height: 360px"></p>
 </div>
 </section><section id="but-how-do-i-get-the-zenodo-doi-into-the-release-citation.cff-file-automagically" class="slide level2">
 <h2>“But how do I get the Zenodo DOI into the release CITATION.cff file automagically?”</h2>
@@ -361,7 +362,7 @@ Slides: <a href="https://doi.org/10.6084/m9.figshare.10565717">doi:10.6084/m9.fi
 <li>Burnistoun animated GIF from <a href="https://img.buzzfeed.com/buzzfeed-static/static/2017-07/25/10/asset/buzzfeed-prod-fastlane-01/anigif_sub-buzz-28377-1500993996-1_preview.gif?downsize=800:*&amp;output-format=auto&amp;output-quality=auto">BuzzFeed</a>, assumed © by BBC (under fair use)</li>
 <li>Elsevier logo in the public domain <img src="https://licensebuttons.net/p/80x15.png" style="margin: 0;"></li>
 <li>Public Money Public Code logo by Free Software Foundation Europe <img src="https://licensebuttons.net/l/by-sa/4.0/80x15.png" style="margin: 0;"></li>
-<li>Software Heritage courtesy of Software Heritage</li>
+<li>Software Heritage logo courtesy of Software Heritage</li>
 <li>The Open Source Initiative Keyhole Logo by The Open Source Initiative <img src="https://licensebuttons.net/l/by/2.5/80x15.png" style="margin: 0;"></li>
 </ul>
 </div>
