--- a/index.html
+++ b/index.html
@@ -134,6 +134,10 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 <div class="center">
 <p><img data-src="image/FAIRy.png" /></p>
 </div>
+<aside class="notes">
+<h3 id="pis-institutional-management-and-funders-are-recognizing-fair-as-something-desirable">- PIs, institutional management and funders are recognizing FAIR as something desirable</h3>
+<h3 id="therefore-they-increasingly-ask-you-to-make-your-research-artifacts-fair">- Therefore they increasingly ask you to make your research artifacts FAIR</h3>
+</aside>
 </div>
 </section><section id="fair-the-brand-1" class="slide level2">
 <h2>FAIR, the brand</h2>
@@ -147,6 +151,12 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 </ul></li>
 </ul>
 </div><div class="column" style="width:40%;">
+<aside class="notes">
+<h3 id="fair-has-found-its-way-into-good-scientific-practice-guidelines">- FAIR has found its way into Good Scientific Practice Guidelines</h3>
+<h3 id="if-fair-becomes-a-part-of-good-scientific-practice-we-can-leverage-the-brand">- If FAIR becomes a part of Good Scientific Practice, we can leverage the brand</h3>
+<h3 id="fair-is-expensive-it-costs-resources">- FAIR is expensive, it costs resources</h3>
+<h3 id="so-under-the-fair-flag-we-can-better-campaign-and-lobby-for-the-installation-of-rses-across-the-system">- So under the FAIR flag, we can better campaign and lobby for the installation of RSEs across the system</h3>
+</aside>
 <p><img src="image/kodex.png" style="width: 40%;"></p>
 </div>
 </div>
@@ -169,7 +179,12 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 <p>FAIR != GOOD</p>
 </div>
 <aside class="notes">
-<p>FAIR != OPEN [TODO: From Dan’s blog] FAIR != CREDIT [There’s no fair trade in FAIR, explain] FAIR != GOOD [Quality TODO, concerns the functionality fo software, not the form (covered by FAIR)]</p>
+<h3 id="research---including-als---has-shown-that-its-hard-to-just-re-use-fair-for-software-mainly-for-the-following-reasons">- Research - including ALs - has shown that its hard to just re-use FAIR for software, mainly for the following reasons</h3>
+<h3 id="the-fair-principles-dont-require-research-artifacts-to-be-openly-available">- The FAIR PRINCIPLES don’t require research artifacts to be openly available</h3>
+<h3 id="to-not-share-is-not-fair-and-research-should-be-open-to-benefit-the-research-community-and-the-general-public">- To not share is not FAIR, and research should be open to benefit the research community and the general public</h3>
+<h3 id="fair-doesnt-cater-for-credit">- FAIR doesn’t cater for credit</h3>
+<h3 id="but-credit-still-is-the-main-currency-in-research">- But credit still is the main currency in research</h3>
+<p>FAIR != CREDIT [There’s no fair trade in FAIR, explain] FAIR != GOOD [Quality TODO, concerns the functionality fo software, not the form (covered by FAIR)]</p>
 </aside>
 </div>
 </section><section id="perhaps-we-dont-need-fair-software-but-rather-rules-of-fair-play-for-software" class="slide level2">
