--- a/index.html
+++ b/index.html
@@ -121,6 +121,10 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 </ul>
 <p><img src="image/else.gif" style="width: 100px; margin-left: 80px;"></p>
 </div>
+<aside class="notes">
+<h3 id="scienceresearch-not-open-science">- “Science”/“Research” not “Open Science”</h3>
+<h3 id="science-thats-not-open-is-not-traceable-and-therefore-not-knowledge">- Science that’s not open is not traceable, and therefore not knowledge</h3>
+</aside>
 </div>
 </section><section id="fair-the-brand" class="slide level2">
 <h2>FAIR, the brand</h2>
@@ -180,11 +184,14 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 </div>
 <aside class="notes">
 <h3 id="research---including-als---has-shown-that-its-hard-to-just-re-use-fair-for-software-mainly-for-the-following-reasons">- Research - including ALs - has shown that its hard to just re-use FAIR for software, mainly for the following reasons</h3>
-<h3 id="the-fair-principles-dont-require-research-artifacts-to-be-openly-available">- The FAIR PRINCIPLES don’t require research artifacts to be openly available</h3>
+<h3 id="the-fair-principles-dont-require-research-artifacts-to-be-openly-available">- The FAIR PRINCIPLES don’t require research artifacts to be OPENLY available</h3>
 <h3 id="to-not-share-is-not-fair-and-research-should-be-open-to-benefit-the-research-community-and-the-general-public">- To not share is not FAIR, and research should be open to benefit the research community and the general public</h3>
-<h3 id="fair-doesnt-cater-for-credit">- FAIR doesn’t cater for credit</h3>
+<h3 id="fair-doesnt-cater-for-credit">- FAIR doesn’t cater for CREDIT</h3>
 <h3 id="but-credit-still-is-the-main-currency-in-research">- But credit still is the main currency in research</h3>
-<p>FAIR != CREDIT [There’s no fair trade in FAIR, explain] FAIR != GOOD [Quality TODO, concerns the functionality fo software, not the form (covered by FAIR)]</p>
+<h3 id="credit-for-rses-would-enable-better-research-through-better-software">- Credit for RSEs would enable better research through better software</h3>
+<h3 id="quality-concerns-the-usability-and-functionality-of-software">- QUALITY concerns the usability and functionality of software,</h3>
+<h3 id="fair-covers-the-form-of-software-as-data">- FAIR covers the form of software (as data),</h3>
+<h3 id="but-re-usability-heavily-relies-on-adequate-software-quality">- but RE-USABILITY heavily relies on adequate software quality</h3>
 </aside>
 </div>
 </section><section id="perhaps-we-dont-need-fair-software-but-rather-rules-of-fair-play-for-software" class="slide level2">
@@ -198,7 +205,9 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 <p><strong>F</strong>indable, <strong>A</strong>ccessible, <strong>I</strong>nteroperable, <strong>R</strong>eusable,<span class="fragment"><br/>and <strong>P</strong>er default open source,</span> <span class="fragment"><strong>L</strong>icensed,</span> <span class="fragment"><strong>A</strong>ttributing contributions to it (for credit),</span> <span class="fragment">and of adequate qualit<strong>Y</strong>!</span></p>
 </div>
 <aside class="notes">
-<p>[TODO: Instead of trying to squeeze software into FAIR, we should extend FAIR to cover software]</p>
+<h3 id="heres-an-idea-perhaps-instead-of-trying-to-squeeze-software-into-fair">- Here’s an idea: Perhaps, instead of trying to squeeze software into FAIR,</h3>
+<h3 id="we-should-extend-the-fair-brand-to-cater-for-open-citable-quality-software.">- we should extend the FAIR brand to cater for open, citable, quality software.</h3>
+<h3 id="licensed-because-its-a-requirement-for-re-use">- “Licensed” because it’s a requirement for re-use</h3>
 </aside>
 </div>
 </section></section>
@@ -213,6 +222,9 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 <div class="center">
 <p><img src="image/pmpc.jpg" style="height:200px;"> <img src="image/osi.png" style="height:200px;"> <img src="image/swh.png" style="height:200px;"></p>
 </div>
+<aside class="notes">
+<h2 id="rse">RSE?</h2>
+</aside>
 </section><section id="rses-be-fair-to-others" class="slide level2">
 <h2>RSEs be FAIR to others</h2>
 <ul>
@@ -240,6 +252,7 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 <li>Provide citation metadata</li>
 </ul>
 </div>
+<p>::: notes ### - You want to be credited for your software world, because otherwise you’ll have no career ### - And if you don’t have a career, you won’t be around to create better software for better research</p>
 </section><section id="okay-also-be-fair-to-others-again" class="slide level2">
 <h2>Okay, also be FAIR to others (again)</h2>
 <div class="large">
@@ -250,7 +263,11 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 </div>
 <aside class="notes">
 <h3 id="cite-software-from-software-via-metadata">- Cite software from software via metadata</h3>
-<h2 id="burnistoun">Burnistoun?</h2>
+<h3 id="cite-your-dependencies">- Cite your dependencies</h3>
+<h3 id="if-we-want-software-to-be-treated-as-a-valid-research-product-we-should-treat-it-the-same-as-papers">- If we want software to be treated as a valid research product, we should treat it the same as papers</h3>
+<h3 id="this-includes-providing-a-reference-list">- This includes providing a reference list</h3>
+<h3 id="citing-other-research-that-your-research-builds-on">- citing other research that your research builds on</h3>
+<h3 id="burnistoun">- Burnistoun?</h3>
 </aside>
 </section><section id="haud-on-a-bin-minute-here-joe-have-ye-noticed-somethin" class="slide level2">
 <h2>“Haud on a b***in’ minute here, Joe!<br/>Have ye noticed somethin?”</h2>
@@ -357,6 +374,9 @@ FAIR + RSE = FAIR PLAY can achieve for software<br />
 what FAIR has achieved for data</li>
 </ul>
 </div>
+<aside class="notes">
+<h3 id="nevermind-the-branding-its-the-practice-under-the-hood-that-matters">- Nevermind the branding, it’s the practice under the hood that matters</h3>
+</aside>
 </div>
 </section><section id="thanks" class="slide level2" style="text-align: center;">
 <h2>Thanks!</h2>
