--- a/index.html
+++ b/index.html
@@ -252,7 +252,10 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 <li>Provide citation metadata</li>
 </ul>
 </div>
-<p>::: notes ### - You want to be credited for your software world, because otherwise you’ll have no career ### - And if you don’t have a career, you won’t be around to create better software for better research</p>
+<aside class="notes">
+<h3 id="you-want-to-be-credited-for-your-software-world-because-otherwise-youll-have-no-career">- You want to be credited for your software world, because otherwise you’ll have no career</h3>
+<h3 id="and-if-you-dont-have-a-career-you-wont-be-around-to-create-better-software-for-better-research">- And if you don’t have a career, you won’t be around to create better software for better research</h3>
+</aside>
 </section><section id="okay-also-be-fair-to-others-again" class="slide level2">
 <h2>Okay, also be FAIR to others (again)</h2>
 <div class="large">
